# cargo-framework

./: .gitignore  README.md  cargo.Rproj
bindings/: .gitignore  make-bindings  wrapper.h
cargo/: .Rbuildignore  DESCRIPTION  INSTALL  LICENSE  NAMESPACE  NEWS  README.md  justfile
cargo/R/: api_documentation.R  authors.R  build_for_cran.R  cargo.R  cross_compile.R  download_roxido_example.R  expand.R  install.R  internal.R  new_package.R  onLoad.R  prebuild.R  register_calls.R  run.R  rust_fn.R  setup_rust.R  shlib.R
cargo/inst/: CITATION
cargo/inst/doc/: index.html
cargo/inst/include/: cargodummy.h
cargo/inst/template/: .gitignore  DESCRIPTION  DOTRbuildignore  DOTgitignore  INSTALL  LICENSE  LICENSE.note  NAMESPACE  configure  configure.win  justfile
cargo/inst/template/R/: convolve2.R  kall.R  myrnorm.R  onLoad.R  roxido.R  useDynLib.R  zero.R
cargo/inst/template/inst/: AUTHORS
cargo/inst/template/man/: convolve2.Rd  myrnorm.Rd  zero.Rd
cargo/inst/template/src/: .gitignore  Makevars  Makevars.win  README.md  dummy.c  shim.c
cargo/inst/template/src/rust/: Cargo.toml  build.rs  vendor.tar.xz
cargo/inst/template/src/rust/roxido/: Cargo.toml
cargo/inst/template/src/rust/roxido/src/: lib.rs  pc.rs  print.rs  r.rs  r2.rs  rbindings.rs  rold.rs  stop.rs
cargo/inst/template/src/rust/roxido_faer/src/: lib.rs
cargo/inst/template/src/rust/roxido_macro/: Cargo.toml
cargo/inst/template/src/rust/roxido_macro/src/: lib.rs
cargo/inst/template/src/rust/src/: lib.rs  registration.rs
cargo/inst/template/src/rustlib/roxido/: Cargo.toml  README.md
cargo/inst/template/src/rustlib/roxido/src/: lib.rs  r.rs  rbindings.rs
cargo/inst/template/src/rustlib/roxido_macro/: Cargo.toml
cargo/inst/template/src/rustlib/roxido_macro/src/: lib.rs
cargo/inst/template/tools/: cargo.R  cargo_run.R  configure.R  staticlib.R
cargo/man/: api_documentation.Rd  authors.Rd  build_for_cran.Rd  cross_compile.Rd  expand.Rd  install.Rd  new_package.Rd  prebuild.Rd  register_calls.Rd  run.Rd  rust_fn.Rd  setup_rust.Rd  shlib_get.Rd  shlib_set.Rd  target.Rd
cargo/tests/: testthat.R
cargo/tests/testthat/: test-general.R
exper/: Cargo.toml
exper/src/: main.rs
logo/R/: index.html
logo/rustacean.net/: index.html
newversion/: .Rbuildignore  .gitignore  DESCRIPTION  INSTALL  NAMESPACE  justfile
newversion/R/: myrnorm.R
newversion/src/: Makevars.win
newversion/src/rust/roxido/: Cargo.toml
newversion/src/rust/roxido_faer/: Cargo.toml
newversion/src/rust/src/: lib.rs
notes/: CRAN-packages-using-Rust  TODO.txt  all-packages.R  targets-for-CRAN
roxido/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md
roxido/R/: authors.R  build_for_cran.R  install.R  new_package.R  run.R  rust_fn.R
roxido/inst/: CITATION
roxido/inst/template/: LICENSE  configure  justfile
roxido/inst/template/man/: convolve2.Rd  myrnorm.Rd  zero.Rd
roxido/inst/template/src/: Makevars  dummy.c
roxido/inst/template/tools/: cargo_run.R
roxido/man/: build_for_cran.Rd  run.Rd
sync-against-roxidoExample/: cargo-msrv  cargo-update  list-all-packages  msrv  update  update-taylored  update-taylored2  update-taylored3
tests/: .gitignore  README.txt  all-debian-testing-cargo-convention.txt  all-debian-testing-cargo-package.txt  all-debian-testing-cargo-path.txt  all-debian.txt  all-fedora-cargo-convention.txt  all-fedora-cargo-package.txt  all-fedora-cargo-path.txt  all-linux.txt  all-mac_m1.txt  all-mac_x64.txt  all-macbuilder-m1.txt  all-macbuilder.txt  all-popos-path.txt  all-winbuilder-nofish.txt  all-windows.txt  justfile  tests-api2.R  tests.R  tests3.R
tests/memleak/: memleak.R
update/: update  update-all
(+15 files in other folders)
