[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
# But, the get helpful line numbers, also uncomment below and recompile.
[profile.release]
debug = "line-tables-only"

[dependencies]
roxido = { path="roxido" }
# roxido_faer = { path="roxido_faer" }

