[package]
name = "roxido"
version = "0.5.1"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2021"
description = "A framework is provided to transparently develop R packages using Rust with minimal overhead, and more wrappers are easily added."
homepage = "https://github.com/dbdahl/cargo-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
roxido_macro = { path="../roxido_macro" }
