[package]
name = "roxido_macro"
version = "0.5.1"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2021"
description = "Macros to support the roxido crate"
homepage = "https://github.com/dbdahl/cargo-framework"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
