[package]
name = "roxido"
version = "0.4.0"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2018"
description = "Support for writing R packages based on Rust"
homepage = "https://dahl.byu.edu"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
roxido_macro = { path="../roxido_macro" }
