[package]
name = "roxido_macro"
version = "0.4.1"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2018"
description = "Macros to support the roxido crate"
homepage = "https://github.com/dbdahl/cargo-framework"
license = "MIT OR Apache-2.0"
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.74", features = ["full"] }
quote = "1.0"
